--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
-@import url("https://fonts.googleapis.com/css2?family=Exo:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Roboto:100,200,300,400,500,600,700|Exo:100,200,300,400,500,600,700");
 
-/* ------------------------------- Colors */
+/*--------------------------------------------Colors*/
 
 .bg-color-name-title {
   background-color: #676767;
@@ -8,6 +8,14 @@
 
 .bg-color-three-reasons {
   background-color: #fff;
+}
+
+.bg-color-personal-info {
+  background-color: #f4f4f4;
+}
+
+.bg-color-work-history {
+  background-color: #9b59b6;
 }
 
 .ui-menu-color-home {
@@ -26,13 +34,13 @@
   background-color: #525252;
 }
 
-/* ------------------------------- Special paddings/margins/text */
+/* ----------------------------------------Special paddings/margins/text */
 
 h1,
 h2,
 h3,
 h4 {
-  margin: 0px;
+  margin: 0;
 }
 
 .uppercase {
@@ -55,10 +63,11 @@ h4 {
 
 .section-column {
   display: table-cell;
-  padding: 0px 30px 30px;
+  padding: 0 30px 30px;
   float: none;
 }
 
+.history-heading,
 .section-heading {
   font-family: "Exo", sans-serif;
   font-weight: 300;
@@ -66,10 +75,10 @@ h4 {
   margin-bottom: 40px;
 }
 
-/* ------------------------------- Heading */
+/*--------------------------------------------Heading*/
 
 header {
-  margin: 0px;
+  margin: 0;
 }
 
 .heading {
@@ -105,20 +114,20 @@ header {
 }
 
 .list-inline-item:not(:last-child) {
-  margin: 0px;
+  margin: 0;
 }
 
 .menucontainer {
   font-size: 0;
 }
 
-#nav {
-  margin: 0;
-}
-
 #nav li {
   font-size: 14px;
   padding: 0;
+}
+
+#nav {
+  margin: 0;
 }
 
 .menuitem {
@@ -135,7 +144,7 @@ header {
 }
 
 .menuitem a i {
-  padding-top: 34px;
+  padding-top: 22px;
   display: block;
   color: #fafafa;
   font-size: 26px;
@@ -152,20 +161,20 @@ header {
   letter-spacing: 2px;
 }
 
-/* ------------------------------- Hover.css */
+/*--------------------------------------------Hover.css*/
 
 .hvr-sweep-to-bottom:before {
   background: rgba(0, 0, 0, 0.2);
   height: 120px;
 }
 
-/* ------------------------------- Footer */
+/* ----------------------------------------Footer */
 
 footer {
   background-color: #525252;
   color: #fafafa;
   min-height: 120px;
-  margin: 0px;
+  margin: 0;
 }
 
 .cv-pdf i {
@@ -190,7 +199,7 @@ footer {
 .social-links li a i {
   width: 32px;
   height: 32px;
-  padding: 12px 0px;
+  padding: 12px 0;
   border-radius: 50%;
   font-size: 13px;
   line-height: 7px;
@@ -209,4 +218,119 @@ footer {
 
 #footer-details {
   padding: 20px;
+}
+
+/* ----------------------------------------Three Reasons */
+
+.three-reasons-icon {
+  font-size: 26px;
+  color: #e67e22;
+}
+
+.three-reasons-heading {
+  margin-bottom: 15px;
+}
+
+/* ----------------------------------------Personal Info */
+
+.personal-info-item {
+  margin-bottom: 20px;
+  display: block;
+  clear: both;
+}
+
+.personal-info-item .key,
+.personal-info-item .value {
+  padding-right: 8px;
+  display: inline-block;
+}
+
+.personal-info-item .key p,
+.personal-info-item .value p {
+  margin: 0;
+}
+
+.personal-info-item .key {
+  width: 30%;
+  margin-right: 21px;
+  padding-top: 2px;
+  vertical-align: top;
+}
+
+.personal-info-item .key p {
+  font-weight: 700;
+}
+
+.personal-info-item .value {
+  position: relative;
+  width: 60%;
+}
+
+/* ----------------------------------------Skills */
+
+.progress {
+  position: relative;
+  height: 25px;
+  margin-bottom: 4px;
+}
+
+.progress-type {
+  position: absolute;
+  left: 0px;
+  font-weight: 400;
+  padding: 3px 30px 2px 10px;
+  color: #fafafa;
+  background-color: rgba(25, 25, 25, 0.2);
+}
+
+.progress-section {
+  margin: 40px 20px;
+}
+
+/* ----------------------------------------Work History */
+
+.history-heading {
+  color: #fafafa;
+  margin-bottom: 50px;
+}
+
+.timeline-item {
+  padding: 4em 2em 0em 2em;
+  position: relative;
+  color: #fafafa;
+  border-left: 1px solid;
+}
+
+.timeline-item p {
+  padding: 0;
+  margin: 0;
+}
+
+.timeline-item:before {
+  content: attr(data-dates);
+  position: absolute;
+  left: 2.5em;
+  top: 3em;
+  display: block;
+  font-family: "Exo", sans-serif;
+  font-weight: 500;
+  font-size: 0.8em;
+  padding: 0;
+  margin: 0;
+}
+
+.timeline-item:after {
+  width: 12px;
+  height: 12px;
+  display: block;
+  top: 2.4em;
+  position: absolute;
+  left: -6px;
+  border-radius: 12px;
+  content: "";
+  background: #fafafa;
+}
+
+.history-items {
+  margin-bottom: 30px;
 }
